Description : modified action layout Bug ID: NA Reviewed By: Sanjay

--- a/trunk/technical/src/apps/user/patientcare/src/app/modules/patient-management/action/action.component.css
+++ b/trunk/technical/src/apps/user/patientcare/src/app/modules/patient-management/action/action.component.css
@@ -64,7 +64,8 @@
 
 .float-btn-cat {
     background-color: #6e6e6e;
-    border-radius: 3px;
+    /* border-radius: 3px; */
+    border-radius:22;
     width: 44;
     height: 44;
     text-align: center;
